<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">二手淘</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="myself">myself</string>
    <string name="agree">批准</string>
    <string name="disagree">不批准</string>
    <string name="shopname">商品名</string>
    <string name="delete">删除</string>
    <string name="shopname1">商品名:</string>
    <string name="category">商品类型:</string>
    <string name="publishname">发布者:</string>
    <string name="price">价格:</string>
    <string name="time">发布时间:</string>
     <string name="decripe">描述:</string>
    <string name="call">电话联系ta</string>
    <string name="discuss"> 查看评价</string>
    <string name="uesrmanager">用户管理</string>
    <string name="username">用户名:</string>
    <string name="denglu">点此登陆</string>
    <string name="exit">退出当前账号</string>
   <string name="changepass">修改密码</string>
    <string name="nowpass">当前密码: </string>
    <string name="newpass">新密码: </string>
    <string name="surepass">确认新密码：</string>
    <string name="changenewpass">更改新密码</string>
    <string name="phone">联系方式：</string>
    <string name="changeinfo">修改信息</string>
    <string name="welcome">Welcome</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="resmeberPassword">记住密码</string>
    <string name="denglu1">登陆</string>
    <string name="zhuce">注册</string>
    <string name="publishmessage">发布信息</string>
</resources>
