<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/top_itml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/shopname1" />
        <EditText
            android:id="@+id/detail_shopname"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/detail_category"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:clickable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/detail_price"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:focusable="false" />
    </LinearLayout>

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/decripe" />

    <EditText
        android:id="@+id/detail_descripe"
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:focusable="false"
        android:gravity="left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/detail_username"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/detail_phone"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <EditText
            android:id="@+id/detail_time"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:focusable="false" />
    </LinearLayout>

    <Button
        android:id="@+id/detail_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/exitbuttonshape"
        android:gravity="center"
        android:text="@string/changeinfo"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>