<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/top_itml" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/changepass"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/nowpass" />

        <EditText
            android:id="@+id/change_passw"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/newpass" />

        <EditText
            android:id="@+id/change_newpassw"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/surepass" />

        <EditText
            android:id="@+id/change_confirmpassw"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/change_butconfirm"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/exitbuttonshape"
        android:gravity="center"
        android:text="@string/changenewpass"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>